Fix bug of non expected scrollbar when footer outside of page

--- a/portfolio/components/Footer/footer.module.css
+++ b/portfolio/components/Footer/footer.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+    overflow: hidden;
+}
+
 .footer {
     display: flex;
     width: 100%;
